--- a/Imobiliaria/nbproject/project.properties
+++ b/Imobiliaria/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Imobiliaria
-application.vendor=Cleber
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,13 +24,10 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Imobiliaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
