--- a/trunk/Imobiliaria/nbproject/project.properties
+++ b/trunk/Imobiliaria/nbproject/project.properties
@@ -25,10 +25,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Imobiliaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jodreports-2.4.0.jar=Biblioteca\\jodreports-2.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jodreports-2.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
