--- a/Imobiliaria/nbproject/private/private.properties
+++ b/Imobiliaria/nbproject/private/private.properties
@@ -1,6 +1,2 @@
 compile.on.save=true
-do.depend=false
-do.jar=true
-javac.debug=true
-javadoc.preview=true
-user.properties.file=C:\\Users\\Machado\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\Wilher\\.netbeans\\7.0\\build.properties
