--- a/Imobiliaria/nbproject/private/private.properties
+++ b/Imobiliaria/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\MAYCON\\.netbeans\\7.1.1\\build.properties
+user.properties.file=C:\\Users\\dhsilva\\.netbeans\\7.1.2\\build.properties
