--- a/trunk/Imobiliaria/nbproject/private/private.properties
+++ b/trunk/Imobiliaria/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Documents and Settings\\dhsilva\\.netbeans\\7.1.2\\build.properties
