--- a/trunk/Imobiliaria/nbproject/project.properties
+++ b/trunk/Imobiliaria/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.jar=${dist.dir}/Imobiliaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
