--- a/Imobiliaria/nbproject/project.properties
+++ b/Imobiliaria/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.jar=${dist.dir}/Imobiliaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.18-bin.jar=Biblioteca\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
