--- a/trunk/Imobiliaria/nbproject/project.properties
+++ b/trunk/Imobiliaria/nbproject/project.properties
@@ -115,7 +115,6 @@ file.reference.libfb303-0.7.0.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4
 file.reference.log4j-1.2.15.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4.7.0\\ireport\\modules\\ext\\log4j-1.2.15.jar
 file.reference.mondrian-3.2.0-13661-JS.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4.7.0\\ireport\\modules\\ext\\mondrian-3.2.0-13661-JS.jar
 file.reference.mongo-java-driver-2.7.3.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4.7.0\\ireport\\modules\\ext\\mongo-java-driver-2.7.3.jar
-file.reference.mysql-connector-java-5.1.22-bin.jar=Biblioteca\\mysql-connector-java-5.1.22\\mysql-connector-java-5.1.22\\mysql-connector-java-5.1.22-bin.jar
 file.reference.olap4j-0.9.7.309-JS.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4.7.0\\ireport\\modules\\ext\\olap4j-0.9.7.309-JS.jar
 file.reference.png-encoder-1.5.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4.7.0\\ireport\\modules\\ext\\png-encoder-1.5.jar
 file.reference.poi-3.7-20101029.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-4.7.0\\ireport\\modules\\ext\\poi-3.7-20101029.jar
@@ -248,7 +247,7 @@ javac.classpath=\
     ${file.reference.xml-apis-ext.jar}:\
     ${file.reference.xml-apis.jar}:\
     ${libs.iReport.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.22-bin.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
