atualizações diversas em metodos de acesso ao banco

--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -36,7 +36,8 @@ javac.classpath=\
     ${libs.MySQL5-1-25.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.JodaTime.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +70,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=visao.CadastroPerfil
+main.class=visao.CadastroPermissoes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
