--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -28,6 +28,16 @@ dist.jar=${dist.dir}/TCC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.antlr-2.7.7.jar=src/lib/antlr-2.7.7.jar
+file.reference.dom4j-1.6.1.jar=src/lib/dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-4.0.2.Final.jar=src/lib/hibernate-commons-annotations-4.0.2.Final.jar
+file.reference.hibernate-core-4.2.3.Final.jar=src/lib/hibernate-core-4.2.3.Final.jar
+file.reference.hibernate-entitymanager-4.2.3.Final.jar=src/lib/hibernate-entitymanager-4.2.3.Final.jar
+file.reference.hibernate-envers-4.2.3.Final.jar=src/lib/hibernate-envers-4.2.3.Final.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=src/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar
+file.reference.javassist-3.15.0-GA.jar=src/lib/javassist-3.15.0-GA.jar
+file.reference.jboss-logging-3.1.0.GA.jar=src/lib/jboss-logging-3.1.0.GA.jar
+file.reference.jboss-transaction-api_1.1_spec-1.0.1.Final.jar=src/lib/jboss-transaction-api_1.1_spec-1.0.1.Final.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -36,8 +46,18 @@ javac.classpath=\
     ${libs.MySQL5-1-25.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.JodaTime.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.2.Final.jar}:\
+    ${file.reference.hibernate-core-4.2.3.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-4.2.3.Final.jar}:\
+    ${file.reference.hibernate-envers-4.2.3.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
+    ${file.reference.javassist-3.15.0-GA.jar}:\
+    ${file.reference.jboss-logging-3.1.0.GA.jar}:\
+    ${file.reference.jboss-transaction-api_1.1_spec-1.0.1.Final.jar}:\
+    ${libs.hibernate-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
