--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -38,9 +38,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${libs.hibernate-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}:\
     ${file.reference.joda-time-hibernate-1.2.jar}:\
+    ${libs.ejb3-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}:\
     ${file.reference.joda-time-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
