--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${file.reference.joda-time-hibernate-1.2.jar}:\
     ${libs.ejb3-persistence.classpath}:\
     ${libs.hibernate-support.classpath}:\
-    ${file.reference.joda-time-2.0.jar}
+    ${file.reference.joda-time-2.0.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
