--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -1,5 +1,5 @@
 annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
+annotation.processing.enabled.in.editor=true
 annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
@@ -29,20 +29,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.joda-time-2.0.jar=src\\lib\\joda-time-2.0.jar
-file.reference.joda-time-hibernate-1.2.jar=src\\lib\\joda-time-hibernate-1.2.jar
-file.reference.mysql-connector-java-5.1.18-bin.jar=D:\\Documentos\\Univel\\3\u00ba Ano\\TCC\\lib\\mysql-connector-java-5.1.18-bin.jar
+file.reference.joda-time-hibernate-1.2.jar-1=src\\lib\\joda-time-hibernate-1.2.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar=src/lib/mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.joda-time-hibernate-1.2.jar}:\
     ${libs.ejb3-persistence.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${libs.hibernate-support.classpath}:\
+    ${libs.beans-binding.classpath}:\
     ${file.reference.joda-time-2.0.jar}:\
-    ${libs.beans-binding.classpath}
+    ${file.reference.joda-time-hibernate-1.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
