--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -44,7 +44,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.joda-time-2.0.jar}:\
     ${file.reference.Bematech.jar}:\
-    ${file.reference.joda-time-hibernate-1.2.jar-1}
+    ${file.reference.joda-time-hibernate-1.2.jar-1}:\
+    ${libs.iReport.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +78,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=visao.CadastroPermissoes
+main.class=visao.Cadastro.CadastroPermissoes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
