--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.jar=${dist.dir}/TCC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Bematech.jar=D:\\Documentos\\Univel\\3\u00ba Ano\\TCC\\Sistema\\TCC\\src\\lib\\Emul4200THFI\\Java\\x64\\Bematech.jar
 file.reference.joda-time-2.0.jar=src\\lib\\joda-time-2.0.jar
 file.reference.joda-time-hibernate-1.2.jar-1=src\\lib\\joda-time-hibernate-1.2.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=src/lib/mysql-connector-java-5.1.18-bin.jar
@@ -38,14 +37,13 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.ejb3-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${libs.hibernate-support.classpath}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.joda-time-2.0.jar}:\
-    ${file.reference.Bematech.jar}:\
     ${file.reference.joda-time-hibernate-1.2.jar-1}:\
-    ${libs.iReport.classpath}
+    ${libs.hibernate-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}:\
+    ${libs.ejb3-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
