implementação do cadastro de usuarios/funcionarios

--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -42,8 +42,8 @@ javac.classpath=\
     ${file.reference.joda-time-2.0.jar}:\
     ${file.reference.joda-time-hibernate-1.2.jar-1}:\
     ${libs.hibernate-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}:\
-    ${libs.ejb3-persistence.classpath}
+    ${libs.ejb3-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
