--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -76,7 +76,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=visao.Cadastro.CadastroPermissoes
+main.class=visao.Cadastro.Administrativo.Permissoes.CadastroPermissoes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
