--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -28,8 +28,15 @@ dist.jar=${dist.dir}/TCC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.com-jaspersoft-ireport.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.1.0\\ireport\\modules\\com-jaspersoft-ireport.jar
+file.reference.iReport.jar=src/lib/iReport/iReport.jar
+file.reference.jasperreports-3.0.0.jar=src/lib/iReport/jasperreports-3.0.0.jar
+file.reference.jasperreports-extensions-1.3.1.jar=src/lib/iReport/jasperreports-extensions-1.3.1.jar
+file.reference.jasperreports-flash-2.0.5.jar=src/lib/iReport/jasperreports-flash-2.0.5.jar
 file.reference.joda-time-2.0.jar=src\\lib\\joda-time-2.0.jar
 file.reference.joda-time-hibernate-1.2.jar-1=src\\lib\\joda-time-hibernate-1.2.jar
+file.reference.js_jasperserver-common-ws-3.0.0.jar=src/lib/iReport/js_jasperserver-common-ws-3.0.0.jar
+file.reference.js_jasperserver-ireport-plugin-3.0.0.jar=src/lib/iReport/js_jasperserver-ireport-plugin-3.0.0.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=src/lib/mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -43,7 +50,14 @@ javac.classpath=\
     ${file.reference.joda-time-hibernate-1.2.jar-1}:\
     ${libs.hibernate-persistence.classpath}:\
     ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}
+    ${libs.hibernate-support.classpath}:\
+    ${file.reference.com-jaspersoft-ireport.jar}:\
+    ${file.reference.iReport.jar}:\
+    ${file.reference.jasperreports-3.0.0.jar}:\
+    ${file.reference.jasperreports-extensions-1.3.1.jar}:\
+    ${file.reference.jasperreports-flash-2.0.5.jar}:\
+    ${file.reference.js_jasperserver-common-ws-3.0.0.jar}:\
+    ${file.reference.js_jasperserver-ireport-plugin-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,7 +90,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=visao.Cadastro.Administrativo.Permissoes.CadastroPermissoes
+main.class=visao.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
