--- a/TCC/nbproject/project.properties
+++ b/TCC/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/TCC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Bematech.jar=src\\lib\\Bema\\Java\\x64\\Bematech.jar
 file.reference.com-jaspersoft-ireport.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.1.0\\ireport\\modules\\com-jaspersoft-ireport.jar
 file.reference.iReport.jar=src/lib/iReport/iReport.jar
 file.reference.jasperreports-3.0.0.jar=src/lib/iReport/jasperreports-3.0.0.jar
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.jasperreports-extensions-1.3.1.jar}:\
     ${file.reference.jasperreports-flash-2.0.5.jar}:\
     ${file.reference.js_jasperserver-common-ws-3.0.0.jar}:\
-    ${file.reference.js_jasperserver-ireport-plugin-3.0.0.jar}
+    ${file.reference.js_jasperserver-ireport-plugin-3.0.0.jar}:\
+    ${file.reference.Bematech.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
