impressao cupom fiscal

--- a/TCC/BemaFI64.ini
+++ b/TCC/BemaFI64.ini
@@ -11,8 +11,8 @@
 ;----------------------------------------------------------------------------;
 
 [Sistema]
-Porta=DEFAULT
-Path=C:\teszet\TCC
+Porta=COM2
+Path=C:\teszet\TCC\
 Status=0
 Retorno=0
 StatusFuncao=0
@@ -25,7 +25,7 @@ LogDiario=1
 CrLfVinculado=0
 CrLfGerencial=0
 TimeOutGerencial=40
-EmulMFD=1
+EmulMFD=0
 StatusCheque=
 CalculoIcmsCupom=0
 ForceWTSClient=1
