--- a/TCC/BemaFI64.ini
+++ b/TCC/BemaFI64.ini
@@ -11,7 +11,7 @@
 ;----------------------------------------------------------------------------;
 
 [Sistema]
-Porta=COM2
+Porta=COM1
 Path=C:\teszet\TCC\
 Status=0
 Retorno=0
@@ -25,8 +25,8 @@ LogDiario=1
 CrLfVinculado=0
 CrLfGerencial=0
 TimeOutGerencial=40
-EmulMFD=0
-StatusCheque=
+EmulMFD=1
+StatusCheque=0
 CalculoIcmsCupom=0
 ForceWTSClient=1
 RetriesWTSCmd=3
@@ -40,9 +40,9 @@ Porta=
 
 
 [MFD]
-Impressora=1
-StatusErro=1
-TimeOutZ=99
+Impressora=0
+StatusErro=0
+TimeOutZ=500
 
 
 [Opcional]
