--- a/TCCWeb/nbproject/project.properties
+++ b/TCCWeb/nbproject/project.properties
@@ -26,25 +26,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.aopalliance-1.0.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\aopalliance-1.0.jar
-file.reference.gson-2.2.4.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\gson-2.2.4.jar
-file.reference.guava-11.0.2.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\guava-11.0.2.jar
-file.reference.guice-3.0.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\guice-3.0.jar
-file.reference.guice-multibindings-3.0.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\guice-multibindings-3.0.jar
-file.reference.iogi-0.9.2.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\iogi-0.9.2.jar
-file.reference.javassist-3.12.1.GA.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\javassist-3.12.1.GA.jar
-file.reference.javax.inject-1.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\javax.inject-1.jar
-file.reference.jsr305-1.3.9.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\jsr305-1.3.9.jar
-file.reference.log4j-1.2.16.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\log4j-1.2.16.jar
-file.reference.mirror-1.6.1.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\mirror-1.6.1.jar
-file.reference.objenesis-1.3.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\objenesis-1.3.jar
-file.reference.paranamer-2.5.2.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\paranamer-2.5.2.jar
-file.reference.scannotation-1.0.2.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\scannotation-1.0.2.jar
-file.reference.slf4j-api-1.6.1.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\slf4j-api-1.6.1.jar
-file.reference.slf4j-log4j12-1.6.1.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\slf4j-log4j12-1.6.1.jar
-file.reference.vraptor-3.5.3.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\vraptor-3.5.3.jar
-file.reference.xpp3_min-1.1.4c.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\xpp3_min-1.1.4c.jar
-file.reference.xstream-1.3.1.jar=D:\\Documentos\\ExemploVRaptor\\VRaptor\\vraptor-blank-project-3.5.3\\vraptor-blank-project\\WebContent\\WEB-INF\\lib\\xstream-1.3.1.jar
+file.reference.joda-time-2.0.jar=C:\\teszet\\TCC\\src\\lib\\joda-time-2.0.jar
+file.reference.joda-time-hibernate-1.2.jar=C:\\teszet\\TCC\\src\\lib\\joda-time-hibernate-1.2.jar
+file.reference.vraptor-3.5.3.jar=web/WEB-INF/lib/vraptor-3.5.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -55,26 +39,13 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${reference.TCC.jar}:\
-    ${file.reference.aopalliance-1.0.jar}:\
-    ${file.reference.gson-2.2.4.jar}:\
-    ${file.reference.guava-11.0.2.jar}:\
-    ${file.reference.guice-3.0.jar}:\
-    ${file.reference.guice-multibindings-3.0.jar}:\
-    ${file.reference.iogi-0.9.2.jar}:\
-    ${file.reference.javassist-3.12.1.GA.jar}:\
-    ${file.reference.javax.inject-1.jar}:\
-    ${file.reference.jsr305-1.3.9.jar}:\
-    ${file.reference.log4j-1.2.16.jar}:\
-    ${file.reference.mirror-1.6.1.jar}:\
-    ${file.reference.objenesis-1.3.jar}:\
-    ${file.reference.paranamer-2.5.2.jar}:\
-    ${file.reference.scannotation-1.0.2.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.slf4j-log4j12-1.6.1.jar}:\
+    ${libs.hibernate-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}:\
+    ${libs.jstl11.classpath}:\
     ${file.reference.vraptor-3.5.3.jar}:\
-    ${file.reference.xpp3_min-1.1.4c.jar}:\
-    ${file.reference.xstream-1.3.1.jar}:\
-    ${libs.jstl11.classpath}
+    ${file.reference.joda-time-2.0.jar}:\
+    ${file.reference.joda-time-hibernate-1.2.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
